# restic-browsing-server

./: .gitignore  Cargo.sublime-workspace  Cargo.toml  README.md  Rocket.toml  restic-browsing-server.sublime-workspace  restic_browser_structure.sql
example/: rbs_config.json
public/css/: _mixins.scss  account.css  account.css.map  account.scss  bonsai.css  bucket.css  bucket.css.map  bucket.scss  home.scss  index.css  index.css.map  index.scss  login.css  login.css.map  login.scss  main.css  main.css.map  main.scss  signup.css  signup.css.map  signup.scss
public/js/: account.js  bucket_items.js  index.js  jquery.bonsai.js  register_validation.js
src/: account_management.rs  db_tables.rs  handlebar_helpers.rs  helper.rs  main.rs  repository_mods.rs
templates/: account.html.hbs  activation_email_change.html.hbs  bucket.html.hbs  home.html.hbs  index.html.hbs  login.html.hbs  signup.html.hbs
