[package]
name = "restic_browsing_server"
version = "0.1.0"
authors = ["Hand-of-Cthulhu <3rdhandofcthulhu@gmail.com>"]

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde="*"
serde_derive="*"
lazy_static = "*"
zip = "*"
walkdir="*"
diesel = { version = "*", features = ["mysql"] }
base64 = "*"
ring = "*"
regex = "*"
urlencoding = "*"
dirs = "*"
#serde_json = "*"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "json"]