[package]
name = "restic_browsing_server"
version = "0.1.0"
authors = ["Hand-of-Cthulhu <3rdhandofcthulhu@gmail.com>"]

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = { version = "1.0.84", features = ["derive"] }
lazy_static = "1.2.0"
zip = "0.5.0"
walkdir= "2.2.7"
diesel = { version = "1.3.3", features = ["mysql"] }
base64 = "0.10.0"
ring = "0.13.5"
regex = "1.1.0"
urlencoding = "1.0.0"
dirs = "1.0.4"
lettre-openssl111 = "0.9.0"
time = "*"
#serde_json = "*"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["handlebars_templates", "json"]
