[package]
name = "restic_browsing_server"
version = "0.2.0"
authors = ["8176135 <8176135@gmail.com>"]

[dependencies]
actix-web = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
zip = "*"
walkdir= "*"
diesel = { version = "*", features = ["mysql", "chrono"] }
chrono = { version = "*", features = ["serde"] }
base64 = "*"
ring = "*"
regex = "*"
urlencoding = "*"
dirs = "*"
lettre = "*"
time = "*"
serde_json = "*"
base32 = "*"
reqwest = "*"
slog = "*"
sloggers = "*"
flate2 = "*"
handlebars = "*"
